--- a/src/app/Pages/connexion/connexion.component.html
+++ b/src/app/Pages/connexion/connexion.component.html
@@ -7,7 +7,7 @@
             <div class="title">
                 <h1>Login</h1>
             </div>
-            <div class="form_content">
+            <div class="form_content1">
                 <form (ngSubmit)="login()">
                     <div>
                         <label>Email</label>
